[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemy/enemy_saucer.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Explosion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Scenes/EnemyPaths.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/EnemyBullet.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 36.9461

[sub_resource type="Animation" id=2]
resource_name = "flash"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotate"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Enemy" type="Area2D" groups=[
"enemies",
]]
script = ExtResource( 3 )
Bullet = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "rotate"
anims/flash = SubResource( 2 )
anims/rotate = SubResource( 3 )

[node name="Explosion" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="EnemyPaths" parent="." instance=ExtResource( 4 )]
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="animation_finished" from="Explosion/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Explosion"]
